# fastapi-tdd-docker

./: .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: main.yml
app/: main.py
tests/: test_ping.py  test_summaries.py
