[tool.poetry]
name = "fastapi-tdd-docker"
version = "0.1.0"
description = ""
authors = ["Francisco Alface <francisco.alface.br@avenuecode.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.65.3"
uvicorn = "0.14.0"
asyncpg = "0.23.0"
tortoise-orm = "0.17.4"
requests = "2.25.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
pytest = "^6.2.5"
ipython = "^7.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
